--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.2",
     "multer": "^1.4.5-lts.1",
-    "node-mailer": "^0.1.1"
+    "node-mailer": "^0.1.1",
+    "nodemailer": "^6.7.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
