--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.0",
     "@mantine/core": "^5.1.4",
     "@mantine/hooks": "^5.1.4",
+    "@mantine/notifications": "^5.2.4",
     "@reduxjs/toolkit": "^1.8.3",
     "@tabler/icons": "^1.82.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -17,6 +18,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
