--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "mongoose": "^6.4.2",
     "multer": "^1.4.5-lts.1",
     "node-mailer": "^0.1.1",
-    "nodemailer": "^6.7.8"
+    "nodemailer": "^6.7.8",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
