--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.0",
-    "@mantine/core": "^5.1.4",
-    "@mantine/hooks": "^5.1.4",
-    "@mantine/notifications": "^5.2.4",
+    "@mantine/core": "^5.2.5",
+    "@mantine/hooks": "^5.2.5",
+    "@mantine/modals": "^5.2.5",
+    "@mantine/notifications": "^5.2.5",
     "@reduxjs/toolkit": "^1.8.3",
     "@tabler/icons": "^1.82.0",
     "@testing-library/jest-dom": "^5.16.4",
